--- a/KTPOS Order/Login.resx
+++ b/KTPOS Order/Login.resx
@@ -123,4 +123,7 @@
   <metadata name="guna2Elipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="lb2.Text" xml:space="preserve">
+    <value>"If you're an employee, please select 'Staff' in the access panel to proceed with your login. If you're a customer, kindly choose 'Guest' in the access panel to start placing your order. Bon appétit, and thank you for choosing us!"</value>
+  </data>
 </root>
